--- a/webtemplate/templates/base.html
+++ b/webtemplate/templates/base.html
@@ -8,11 +8,9 @@ fit=no">
     <meta name="author" content="Xin Lu"> 
     <!--<link rel="icon" href="TODO">--> 
  
-    <!-- Favicons (http://realfavicongenerator.net) 
-    TODO --> 
+    <!-- Favicons (http://realfavicongenerator.net) TODO --> 
  
-    <!-- Open Graph 
-    TODO --> 
+    <!-- Open Graph TODO --> 
  
     <title>Advanced Development Unit</title> 
  
