--- a/webtemplate/templates/404.html
+++ b/webtemplate/templates/404.html
@@ -7,8 +7,7 @@
     <div> 
       <h3> 404 - <b>{{ request.path }}</b> </h3> 
  
-      <p> The requested URL was not found on the server. If you entered the URL ma
-nually please check your spelling and try again. </p> 
+      <p> The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again. </p> 
  
     </div> 
  
