--- a/webtemplate/templates/about.html
+++ b/webtemplate/templates/about.html
@@ -3,7 +3,7 @@
 {% set active_page = "about" %} 
  
 {% block content %} 
- 
+ <div class="starter-template">
 <p>All that you need to know is on the Unit Brightspace.</p> 
- 
-{% endblock %
+</div>
+{% endblock %}
