--- a/webtemplate/templates/base.html
+++ b/webtemplate/templates/base.html
@@ -60,7 +60,8 @@ here! -->
       {% block content %} 
       {% endblock %} 
  
-    </main><!-- /.container --> 
+    </main>
+    <!-- /.container --> 
  
     <!-- Bootstrap core JavaScript 
     ================================================== --> 
