--- a/webtemplate/templates/register.html
+++ b/webtemplate/templates/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} 
- 
+{% set active_page = "register" %} 
 {% block content %} 
  
-<div class="starter-template"> 
+<div class="starter-template">
   <h1>Register your informaiton </h1> 
   <p class="lead">Please type your information </i></p> 
 </div> 
